styled text area

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     typing..."></textarea><br>
     <button class="button" type="submit">Submit</button>
   </form>
+
+  <section id="entries"></section>
   
   <script src="index.js"></script>
 </body>
